opam-version: "2.0"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-stack"
doc: "https://mirage.github.io/mirage-stack/"
bug-reports: "https://github.com/mirage/mirage-stack/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "jbuilder" {build & >= "1.0+beta9"}
  "mirage-stack" {>= "1.3.0"}
  "ipaddr"
  "lwt"
  "cstruct" {>= "2.4.0"}
]
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-stack.git"
