opam-version: "2.0"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-stack"
doc: "https://mirage.github.io/mirage-stack/"
bug-reports: "https://github.com/mirage/mirage-stack/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "jbuilder" {build & >= "1.0+beta9"}
  "mirage-device" {>= "1.0.0"}
  "mirage-protocols" {>= "1.4.0"}
  "fmt"
]
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-stack.git"
