opam-version: "2.0"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-stack"
doc: "https://mirage.github.io/mirage-stack/"
bug-reports: "https://github.com/mirage/mirage-stack/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.0"}
  "tcpip" {>= "7.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-stack.git"
synopsis: "MirageOS signatures for network stacks"
description: """
mirage-stack provides a set of module types which libraries intended to be used
as MirageOS network stacks should implement.
"""
post-messages: [
  "This package is deprecated. Please use the module types in Tcpip.Stack directly."
]
